tests/baselines/reference/incompatibleExports1.errors.txt
incompatibleExports1.ts(4,5): error TS2309: An export assignment cannot be used in a module with other exported elements.
incompatibleExports1.ts(8,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
incompatibleExports1.ts(12,12): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
incompatibleExports1.ts(16,5): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== incompatibleExports1.ts (4 errors) ====
    declare module "foo" { 
        export interface x { a: string } 
        interface y { a: Date }
        export = y;
        ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    }
     
    declare module "baz" {
        export module a {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export var b: number;
        }
     
        module c {
               ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export var c: string;
        }
     
        export = c;
        ~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    }
    